--- a/src/styles/settings/_utilities.scss
+++ b/src/styles/settings/_utilities.scss
@@ -47,7 +47,6 @@
     }
 
     .cm-setting-group-body {
-      border: 1px solid var(--background-modifier-border);
       border-radius: var(--radius-l);
       background-color: var(--background-primary-alt);
       overflow: hidden;
